[Engine] Correctly creates character

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <style>
 body {
    display: flex;
+    background: #333;
    justify-content: space-around;
    flex-direction: column;
    font-family: 'Do Hyeon', sans-serif;
