--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
 <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
     </head>
+
 <style>
+
 body {
    display: flex;
-    background: #333;
+   background: #333;
    justify-content: space-around;
    flex-direction: column;
    font-family: 'Do Hyeon', sans-serif;
@@ -17,9 +19,20 @@ canvas {
 .canvas-container {
   margin: auto;
 }
+.collision {
+  width: 85%;
+  border-radius: 5px;
+  text-align: center;
+  margin: auto;
+  background: #63f9f7;
+  border: 2px solid #000;
+  display: none;
+}
 </style>
     <body>
-        <h1 style="text-align: center;">Welcome to Rustventure World!</h1>
+        <h1 style="text-align: center; color: #dbdbdb;">Welcome to Rustventure World!</h1>
+        <div class="collision" id="collision" >
+          </div>
         <div class="canvas-container">
           <canvas id="hero-canvas" style="position: absolute;"></canvas>
           <canvas id="game-canvas"></canvas>
