--- a/index.html
+++ b/index.html
@@ -1,57 +1,60 @@
 <html>
-    <head>
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-<link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
-    </head>
+  <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Do+Hyeon"
+      rel="stylesheet"
+    />
+  </head>
 
-<style>
+  <style>
 
-body {
-   display: flex;
-   background: #333;
-   justify-content: space-around;
-   flex-direction: column;
-   font-family: 'Do Hyeon', sans-serif;
-}
-canvas {
-    border-radius; 5px;
-}
-.canvas-container {
-  margin: auto;
-}
-.collision {
-  width: 85%;
-  border-radius: 5px;
-  text-align: center;
-  margin: auto;
-  background: #63f9f7;
-  border: 2px solid #000;
-  display: none;
-}
-.bar {
-  border-radius: 7px;
-  border: 1px solid #dbdbdb;
-  height: 15px;
-  width: 30%;
-}
-#health {
-  height: 100%;
-  background: #fc255b;
-  border-radius: 7px;
-}
-
-</style>
-    <body>
-        <h1 style="text-align: center; color: #dbdbdb;">Welcome to Rustventure World!</h1>
-        <div class="bar">
-          <div id="health"></div>
-        </div>
-        <div class="collision" id="collision" >
-          </div>
-        <div class="canvas-container">
-          <canvas id="hero-canvas" style="position: absolute;"></canvas>
-          <canvas id="game-canvas"></canvas>
-        </div>
-        <script src='./bootstrap.js'></script>
-    </body>
+    body {
+       display: flex;
+       background: #333;
+       justify-content: space-around;
+       flex-direction: column;
+       font-family: 'Do Hyeon', sans-serif;
+    }
+    canvas {
+        border-radius; 5px;
+    }
+    .canvas-container {
+      margin: auto;
+    }
+    .collision {
+      width: 85%;
+      border-radius: 5px;
+      text-align: center;
+      margin: auto;
+      background: #63f9f7;
+      border: 2px solid #000;
+      display: none;
+    }
+    .bar {
+      border-radius: 7px;
+      border: 1px solid #dbdbdb;
+      height: 15px;
+      width: 30%;
+      margin-left: 7%;
+      margin-bottom: 25px;
+    }
+    #health {
+      height: 100%;
+      background: #fc255b;
+      border-radius: 7px;
+    }
+  </style>
+  <body>
+    <h1 style="text-align: center; color: #dbdbdb;">
+      Welcome to Rustventure World!
+    </h1>
+    <div class="bar"><div id="health"></div></div>
+    <div class="collision" id="collision"></div>
+    <div class="canvas-container">
+      <canvas id="hero-canvas" style="position: absolute;"></canvas>
+      <canvas id="game-canvas"></canvas>
+    </div>
+    <script src="./bootstrap.js"></script>
+  </body>
 </html>
